--- a/public/locales/mk/translation.json
+++ b/public/locales/mk/translation.json
@@ -7,10 +7,11 @@
     "starflex": "StarFlex"
   },
   "hero": {
-    "title": "Добредојдовте во DoqiSHPK",
-    "subtitle": "Високо квалитетна производство на мебел и душеци",
-    "description": "Doçi Shpk, во партнерство со Starflex, спојува години искуство во производството на високо квалитетни мебел и душеци. Со модерна фабрика, напредна технологија и страст за дизајн, достават производи кои комбинираат удобност, издржливост и стил.",
-    "cta": "Истражете производи"
+    "title": "Квалитет на кој можете да се потпрете,",
+    "subtitle": "Дизајни што ќе ги сакате",
+    "description": "Дизајнирано со прецизност, направено за перформанси – направено за вас",
+    "exploreProducts": "Истражете производи",
+    "shopReadyStock": "Купете готова стока"
   },
   "home": {
     "featuredProducts": "Издвоени производи",
