--- a/public/locales/sr/translation.json
+++ b/public/locales/sr/translation.json
@@ -7,10 +7,11 @@
     "starflex": "StarFlex"
   },
   "hero": {
-    "title": "Добродошли у DoqiSHPK",
-    "subtitle": "Висококвалитетна производња намештаја и душека",
-    "description": "Doçi Shpk, у партнерству са Starflex, спаја године искуства у производњи висококвалитетног намештаја и душека. Са модерном фабриком, напредном технологијом и страшћу за дизајн, испоручујемо производе који комбинују удобност, трајност и стил.",
-    "cta": "Истражи производе"
+    "title": "Квалитет којем можете веровати,",
+    "subtitle": "Дизајни које ћете волети",
+    "description": "Дизајнирано прецизно, направљено за перформансе – направљено за вас",
+    "exploreProducts": "Истражи производе",
+    "shopReadyStock": "Купи готову робу"
   },
   "home": {
     "featuredProducts": "Издвојени производи",
