--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,10 +7,11 @@
     "starflex": "StarFlex"
   },
   "hero": {
-    "title": "Welcome to DoqiSHPK",
-    "subtitle": "High-quality furniture and mattress production",
-    "description": "Doçi Shpk, in partnership with Starflex, brings together years of experience in high-quality furniture and mattress production. With a modern factory, advanced technology, and a passion for design, we deliver products that combine comfort, durability, and style.",
-    "cta": "Explore Products"
+    "title": "Quality You Can Trust,",
+    "subtitle": "Designs You'll Love",
+    "description": "Designed with precision, built for performance – made for you",
+    "exploreProducts": "Explore Products",
+    "shopReadyStock": "Shop Ready Stock"
   },
   "home": {
     "featuredProducts": "Featured Products",
