fix: some final design for hero section

--- a/public/locales/al/translation.json
+++ b/public/locales/al/translation.json
@@ -9,7 +9,7 @@
   "hero": {
     "title": "Cilësi që Mund të Besosh,",
     "subtitle": "Dizajne që do t'i Duash",
-    "description": "Projektuar me precizion, ndërtuar për performancë – bërë për ty",
+    "description": "Projektuar me precizion, ndërtuar për performancë - bërë për ty",
     "exploreProducts": "Eksploro Produktet",
     "shopReadyStock": "Blej Stokun Gati"
   },
