--- a/public/locales/mk/translation.json
+++ b/public/locales/mk/translation.json
@@ -15,9 +15,18 @@
   },
   "home": {
     "featuredProducts": "Издвоени производи",
+    "aboutUsTitle": "За нас",
+    "aboutHeading": "Површини креирани да инспирираат.",
     "aboutTitle": "За DoqiSHPK",
-    "aboutDescription1": "Doçi Shpk, во партнерство со Starflex, спојува години искуство во производството на високо квалитетни мебел и душеци. Со модерна фабрика, напредна технологија и страст за дизајн, достават производи кои комбинираат удобност, издржливост и стил.",
-    "aboutDescription2": "Нашата посветеност кон извонредност обезбедува дека секој парче мебел и секој душек ги исполнува највисоките стандарди за квалитет и занаетчиство.",
+    "aboutDescription1": "Doçi Shpk, во партнерство со Starflex, спојува години искуство во производството на високо квалитетни мебел и душеци. Со модерна фабрика, напредна технологија и страст за дизајн, достават",
+    "aboutDescription2": "Doçi Shpk, во партнерство со Starflex, спојува години искуство во производството на високо квалитетни мебел и душеци.",
+    "aboutDescription2Short": "Doçi Shpk, во партнерство со Starflex, спојува години искуство во производството на високо квалитетни мебел и душеци.",
+    "stat1Label": "Доверливост",
+    "stat1Description": "Високо доверба и задоволство на клиентите",
+    "stat2Label": "Број на производи",
+    "stat2Description": "Уникатни производи за задоволување на секоја градежна и дизајнерска потреба",
+    "stat3Label": "Клиенти ...30 години со DoqiSHPK",
+    "stat3Description": "Клиенти кои ја избраа Doqi SHPK во текот на 30 години успех",
     "customerReviews": "Што велат нашите клиенти",
     "reviewsSubtitle": "Вистински коментари од нашите задоволни клиенти"
   },
@@ -62,6 +71,8 @@
     "colors": "Бои",
     "description": "Опис",
     "search": "Барај",
-    "language": "Јазик"
+    "language": "Јазик",
+    "readMore": "Прочитај повеќе",
+    "readLess": "Прочитај помалку"
   }
 }
