--- a/public/locales/bs/translation.json
+++ b/public/locales/bs/translation.json
@@ -15,9 +15,18 @@
   },
   "home": {
     "featuredProducts": "Izdvojeni proizvodi",
+    "aboutUsTitle": "O nama",
+    "aboutHeading": "Površine kreirane da inspirišu.",
     "aboutTitle": "O DoqiSHPK",
-    "aboutDescription1": "Doçi Shpk, u partnerstvu sa Starflex, spaja godine iskustva u proizvodnji visokokvalitetnog namještaja i dušeka. Sa modernom tvornicom, naprednom tehnologijom i strašću za dizajn, isporučujemo proizvode koji kombiniraju udobnost, trajnost i stil.",
-    "aboutDescription2": "Naša posvećenost izvrsnosti osigurava da svaki komad namještaja i svaki dušek ispunjava najviše standarde kvaliteta i zanatstva.",
+    "aboutDescription1": "Doçi Shpk, u partnerstvu sa Starflex, spaja godine iskustva u proizvodnji visokokvalitetnog namještaja i dušeka. Sa modernom tvornicom, naprednom tehnologijom i strašću za dizajn, isporučujemo",
+    "aboutDescription2": "Doçi Shpk, u partnerstvu sa Starflex, spaja godine iskustva u proizvodnji visokokvalitetnog namještaja i dušeka.",
+    "aboutDescription2Short": "Doçi Shpk, u partnerstvu sa Starflex, spaja godine iskustva u proizvodnji visokokvalitetnog namještaja i dušeka.",
+    "stat1Label": "Pouzdanost",
+    "stat1Description": "Visoko povjerenje i zadovoljstvo kupaca",
+    "stat2Label": "Broj proizvoda",
+    "stat2Description": "Jedinstveni proizvodi za zadovoljavanje svake građevinske i dizajnerske potrebe",
+    "stat3Label": "Kupci ...30 godina sa DoqiSHPK",
+    "stat3Description": "Kupci koji su odabrali Doqi SHPK tokom 30 godina uspjeha",
     "customerReviews": "Što kažu naši kupci",
     "reviewsSubtitle": "Prave recenzije od naših zadovoljnih kupaca"
   },
@@ -62,6 +71,8 @@
     "colors": "Boje",
     "description": "Opis",
     "search": "Pretraga",
-    "language": "Jezik"
+    "language": "Jezik",
+    "readMore": "Pročitaj više",
+    "readLess": "Pročitaj manje"
   }
 }
