feat: adding new arrival section

--- a/public/locales/al/translation.json
+++ b/public/locales/al/translation.json
@@ -27,6 +27,8 @@
     "stat2Description": "Produkte unike për të përmbushur çdo nevojë ndërtimi dhe dizajni",
     "stat3Label": "Klientë ...30 vjet me DoqiSHPK",
     "stat3Description": "Klientë që kanë zgjedhur Doqi SHPK gjatë 30 viteve të suksesit",
+    "latestArrivals": "Arritjet e Fundit",
+    "latestArrivalsSubtitle": "Duke Prezantuar Arritjet Tona të Fundit - Ngritni Hapësirën Tuaj me Elegancë Bashkëkohore!",
     "customerReviews": "Çfarë Thonë Klientët Tanë",
     "reviewsSubtitle": "Vlerësime të vërteta nga klientët tanë të kënaqur"
   },
