--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -27,6 +27,8 @@
     "stat2Description": "Einzigartige Produkte für jeden Bau- und Designbedarf",
     "stat3Label": "Kunden ...30 Jahre mit DoqiSHPK",
     "stat3Description": "Kunden, die sich über 30 Jahre Erfolg für Doqi SHPK entschieden haben",
+    "latestArrivals": "Neueste Ankünfte",
+    "latestArrivalsSubtitle": "Wir stellen unsere neuesten Ankünfte vor - Erhöhen Sie Ihren Raum mit zeitgenössischer Eleganz!",
     "customerReviews": "Was Unsere Kunden Sagen",
     "reviewsSubtitle": "Echtes Feedback von unseren zufriedenen Kunden"
   },
