--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -27,6 +27,8 @@
     "stat2Description": "Unique products to meet every construction and design need",
     "stat3Label": "Costumers ...30 years with DoqiSHPK",
     "stat3Description": "Customers who have chosen Doqi SHPK over 30 years of success",
+    "latestArrivals": "Latest Arrivals",
+    "latestArrivalsSubtitle": "Introducing Our Latest Arrivals - Elevate Your Space With Contemporary Elegance!",
     "customerReviews": "What Our Customers Say",
     "reviewsSubtitle": "Real feedback from our satisfied customers"
   },
