--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -27,6 +27,8 @@
     "stat2Description": "Produits uniques pour répondre à tous les besoins de construction et de design",
     "stat3Label": "Clients ...30 ans avec DoqiSHPK",
     "stat3Description": "Clients qui ont choisi Doqi SHPK au cours de 30 ans de succès",
+    "latestArrivals": "Dernières arrivées",
+    "latestArrivalsSubtitle": "Présentation de nos dernières arrivées - Élevez votre espace avec élégance contemporaine!",
     "customerReviews": "Ce Que Disent Nos Clients",
     "reviewsSubtitle": "Vrais commentaires de nos clients satisfaits"
   },
