--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -27,6 +27,8 @@
     "stat2Description": "Prodotti unici per soddisfare ogni esigenza di costruzione e design",
     "stat3Label": "Clienti ...30 anni con DoqiSHPK",
     "stat3Description": "Clienti che hanno scelto Doqi SHPK in 30 anni di successo",
+    "latestArrivals": "Ultimi arrivi",
+    "latestArrivalsSubtitle": "Presentazione dei nostri ultimi arrivi - Eleva il tuo spazio con eleganza contemporanea!",
     "customerReviews": "Cosa Dicono i Nostri Clienti",
     "reviewsSubtitle": "Feedback reali dai nostri clienti soddisfatti"
   },
