--- a/public/locales/mk/translation.json
+++ b/public/locales/mk/translation.json
@@ -27,6 +27,8 @@
     "stat2Description": "Уникатни производи за задоволување на секоја градежна и дизајнерска потреба",
     "stat3Label": "Клиенти ...30 години со DoqiSHPK",
     "stat3Description": "Клиенти кои ја избраа Doqi SHPK во текот на 30 години успех",
+    "latestArrivals": "Последни пристигнувања",
+    "latestArrivalsSubtitle": "Ги претставуваме нашите најнови пристигнувања - Подигнете го вашиот простор со современа елеганција!",
     "customerReviews": "Што велат нашите клиенти",
     "reviewsSubtitle": "Вистински коментари од нашите задоволни клиенти"
   },
