--- a/public/locales/sr/translation.json
+++ b/public/locales/sr/translation.json
@@ -27,6 +27,8 @@
     "stat2Description": "Jedinstveni proizvodi za zadovoljavanje svake građevinske i dizajnerske potrebe",
     "stat3Label": "Купци ...30 година са DoqiSHPK",
     "stat3Description": "Kupci koji su odabrali Doqi SHPK tokom 30 godina uspeha",
+    "latestArrivals": "Najnoviji dolasci",
+    "latestArrivalsSubtitle": "Predstavljamo naše najnovije dolaske - Unapredite svoj prostor savremenom elegancijom!",
     "customerReviews": "Шта кажу наши купци",
     "reviewsSubtitle": "Стварне рецензије од наших задовољних купаца"
   },
