--- a/public/locales/hr/translation.json
+++ b/public/locales/hr/translation.json
@@ -27,6 +27,8 @@
     "stat2Description": "Jedinstveni proizvodi za zadovoljavanje svake građevinske i dizajnerske potrebe",
     "stat3Label": "Kupci ...30 godina s DoqiSHPK",
     "stat3Description": "Kupci koji su odabrali Doqi SHPK tijekom 30 godina uspjeha",
+    "latestArrivals": "Najnoviji dolasci",
+    "latestArrivalsSubtitle": "Predstavljamo naše najnovije dolaske - Unaprijedite svoj prostor suvremenom elegancijom!",
     "customerReviews": "Što kažu naši kupci",
     "reviewsSubtitle": "Prave recenzije naših zadovoljnih kupaca"
   },
