--- a/public/locales/mk/translation.json
+++ b/public/locales/mk/translation.json
@@ -35,12 +35,16 @@
   "products": {
     "title": "Наши производи",
     "subtitle": "Истражете ја нашата целосна палета на високо квалитетни мебел и душеци",
+    "ourProducts": "Наши производи",
+    "findYourPerfectPiece": "Најдете го вашиот совршен дел. Прегледајте ја нашата разновидна палета на производи за да го откријете квалитетот и дизајнот што ви говори.",
     "categories": {
       "all": "Сите",
-      "kitchen": "Кујна",
-      "bedroom": "Спална соба",
-      "livingRoom": "Дневна соба",
-      "mattresses": "Душеци"
+      "customerService": "Корисничка Поддршка",
+      "mattress": "Душек",
+      "sofaChair": "Софа и Столче",
+      "mdfChipBoard": "MDF и Иверка",
+      "compactHPL": "Компактен HPL",
+      "accessories": "Прибор"
     },
     "loading": "Се вчитуваат производите...",
     "noProducts": "Моментално нема достапни производи.",
