--- a/public/locales/sr/translation.json
+++ b/public/locales/sr/translation.json
@@ -35,12 +35,16 @@
   "products": {
     "title": "Наши производи",
     "subtitle": "Истражите наш комплетан асортиман висококвалитетног намештаја и душека",
+    "ourProducts": "Наши производи",
+    "findYourPerfectPiece": "Пронађите свој савршени комад. Прегледајте наш разноврстан асортиман производа да откријете квалитет и дизајн који вам говори.",
     "categories": {
       "all": "Све",
-      "kitchen": "Кухиња",
-      "bedroom": "Спаваћа соба",
-      "livingRoom": "Дневна соба",
-      "mattresses": "Душеци"
+      "customerService": "Корисничка Подршка",
+      "mattress": "Душек",
+      "sofaChair": "Софа и Столица",
+      "mdfChipBoard": "MDF и Иверица",
+      "compactHPL": "Компактни HPL",
+      "accessories": "Прибор"
     },
     "loading": "Учитавање производа...",
     "noProducts": "Тренутно нема доступних производа.",
